force-app/main/default/objects/SPEN_Notice__c/SPEN_Notice__c.object-meta.xml
<CustomObject>
    <description>This object is created to capture notice information and send it for SAP sync</description>
    <label>Notice</label>
    <nameField>
        <displayFormat>N-{00000}</displayFormat>
        <label>Notice</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>