force-app/main/default/objects/SPEN_Notice__c/fields/SPEN_LandInterest__c.field-meta.xml
<CustomField>
    <fullName>SPEN_LandInterest__c</fullName>
    <label>Land Right</label>
    <referenceTo>SPEN_Land_Interest__c</referenceTo>
    <relationshipLabel>Notices</relationshipLabel>
    <relationshipName>Notices</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>