force-app/main/default/objects/SPEN_Notice__c/fields/SPEN_NoticePer__c.field-meta.xml
<CustomField>
    <fullName>SPEN_NoticePer__c</fullName>
    <label>Notice Per</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Notice Possible</fullName>
            </value>
            <value>
                <fullName>No Restrictions</fullName>
            </value>
            <value>
                <fullName>End of the Month</fullName>
            </value>
            <value>
                <fullName>End of the Quarter</fullName>
            </value>
            <value>
                <fullName>End of Half Year</fullName>
            </value>
            <value>
                <fullName>Year End</fullName>
            </value>
            <value>
                <fullName>Contract End of Quarter</fullName>
            </value>
            <value>
                <fullName>Contract End of Half Year</fullName>
            </value>
            <value>
                <fullName>Contract Year End</fullName>
            </value>
            <value>
                <fullName>Contract End of Month</fullName>
            </value>
            <value>
                <fullName>Contract End (Renewal)</fullName>
            </value>
            <value>
                <fullName>One-Time Period of Notice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>