force-app/main/default/objects/SPEN_Notice__c/fields/SPEN_NoticeType__c.field-meta.xml
<CustomField>
    <fullName>SPEN_NoticeType__c</fullName>
    <label>Notice Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Period of Notice</fullName>
            </value>
            <value>
                <fullName>Standard Notice Procedure</fullName>
            </value>
            <value>
                <fullName>Individual Notice Procedure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>