force-app/main/default/objects/SPEN_Notice__c/fields/SPEN_PartyGivingNotice__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PartyGivingNotice__c</fullName>
    <label>Party Giving Notice</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contractee</fullName>
            </value>
            <value>
                <fullName>Contractor</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>