force-app/main/default/objects/SPEN_Notice__c/fields/SPEN_Period__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Period__c</fullName>
    <label>Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Months</fullName>
            </value>
            <value>
                <fullName>Weeks</fullName>
            </value>
            <value>
                <fullName>Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>