force-app/main/default/objects/SPEN_Notice__c/fields/SPEN_Term__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Term__c</fullName>
    <label>Term</label>
    <length>30</length>
    <type>Text</type>
</CustomField>